barra de contacto arreglada

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
     </div>
 
-        <div data-aos="fade-up" class="Contact container-fluid row">
+        <div data-aos="fade-up" class="Contact row">
           <div class=" col-md-6 mt-3">
             
           <ul>
