reparacion de texto

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h3> Secado</h3>
                 <p>
                   Como a perro y gatos u otro animal o mascota se le daremos un secado
-                  con toalla o secadora especial para mascotas ya que haci cuidamos de 
+                  con toalla o secadora especial para mascotas ya que a si cuidamos de 
                   sus oidos y limpieza
                 </p>
               </div>
